--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node-dev ./src/index.ts",
+    "start:dev": "ts-node-dev ./src/index.ts",
     "build": "rimraf ./build && tsc",
-    "start:build": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js"
   },
   "author": "Vamsi Krishna Kodimela",
   "license": "ISC",
